<resources>

    <!--Home 1 view page-->
    <string name="app_name">MyRecipesBook</string>
    <string name="what_will_you_cook_today_header">Что будете готовить сегодня?</string>
    <string name="greetings_user_text">Здравствуйте, Анастасия</string>
    <string name="popular_recipes_title">Популярные рецепты</string>
    <string name="search_field_placeholder">Начните поиск</string>
    <string name="recommendations_title">Рекомендуем</string>
    <string name="more_title">Ещё…</string>
    <string name="search_title">Поиск</string>
    <string name="my_recipes_title">Мои рецепты</string>
    <string name="profile_title">Профиль</string>
    <string name="favorite_from_db">Мои любимые рецепты</string>
    <!--Home 1 view page-->

    <!--Recipe View 1-->
    <string name="ingredients_title_header">Ингредиенты</string>
    <string name="time_to_cook">10 мин</string>
    <string name="calories">50 калорий</string>
    <string name="ingredients_title">Ингредиенты</string>
    <string name="recipes_steps_title">Пошаговый рецепт</string>
    <string name="first_step_text">Духовку разогреть до 200°. Палочку ванили разрезать вдоль пополам и ножом соскребсти семена из обеих образованных половинок.</string>
    <string name="second_step_text">Молоко,ваниль и 40 г сах.пудры довести до кипения,снять с огня,накрыть крышкой и дать настояться 20 мин.</string>
    <string name="third_step_text">Отдельно взбить яйцо с 10 г сах.пудры. Каждый кусочек обмакать в молоке,затем в яйце. Поставить в духовку на 10 мин,затем перевернуть каждый кусочек и запекать еще 10 мин.</string>
    <string name="fourth_step_text">Перед подачей посыпать корицей и сах.пудрой,сверху положить порезанную клубнику.</string>
    <string name="bon_appetit_text">Приятного аппетита</string>
    <string name="back_button_text">Вернуться</string>
    <!--Recipe View 1-->

    <!--General views elements-->
    <string name="list_of_popular_1_title">Французские тосты с клубникой</string>
    <string name="list_of_popular_2_title">Тост с корицей и сахаром</string>
    <string name="list_of_recommended_1_title">Черничные маффины</string>
    <string name="list_of_recommended_2_title">Лосось в глазури</string>
    <string name="breakfast_title">Завтрак</string>
    <string name="lunch_title">Обед</string>
    <string name="name_hint">Имя</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">Email</string>
    <string name="general_title_appname">Daily Recipe</string>
    <string name="enter_title">Войти</string>
    <string name="registration_text">Регистрация</string>
    <!--General views elements-->

    <!--Welcome view-->
    <string name="enter_welcome_btn">Вход</string>
    <string name="daily_recipe_main_header_welcome">Daily Recipe</string>
    <string name="daily_recipe_second_header_welcome">Cooking Done The Easy Way</string>
    <!--Welcome view-->

    <!--Login view-->
    <string name="forget_password_btn">Забыли пароль?</string>
    <string name="enter_btn_login">Войти</string>
    <string name="question_login">У вас нет аккаунта?</string>
    <!--Login view-->

    <!--Registration view-->
    <string name="question_registration_text">Already registered?</string>
    <string name="sign_in_btn">Sign in.</string>
    <!--Registration view-->


    <!--Error message-->
    <string name="wrong_password">Пароль должен сожержать не менее 6 символов!</string>
    <string name="wrong_email">Email должен быть не менее 5 символов и содержать @ !</string>
    <string name="wrong_name">Имя должно содердать не менее 3-х сивмволов!</string>
    <!--Error message-->

    <!--Ingredients-->
    <string name="sugar_name">Cахар</string>
    <string name="butter_name">Масло</string>
    <string name="eggs_name">Яйца</string>
    <string name="water_name">Вода</string>
    <string name="blueberry_name">Голубика</string>
    <string name="fish_name">Рыба</string>
    <string name="meat_name">Мясо</string>
    <string name="salt_name">соль</string>
    <string name="flour_name">Мука</string>
    <string name="bread_name">хлеб</string>
    <string name="cinnamon_name">Корица</string>
    <string name="strawberry_name">Клубника</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_Filter">Фильтр</string>
    <string name="clear_filter_btn">Очистить</string>
    <string name="title_type_of_meals">Прием пищи</string>
    <string name="breakfast_txt">Завтрак</string>
    <string name="late_breakfast_txt">Поздний завтрак</string>
    <string name="dinner_txt">Обед</string>
    <string name="supper_txt">Ужин</string>
    <string name="dish_title">Блюдо</string>
    <string name="soups_txt">Cупы</string>
    <string name="snacks_title">Закуски</string>
    <string name="first_dish_txt">Первое блюдо</string>
    <string name="main_dish_txt">Главное блюдо</string>
    <string name="drinks_txt">Напитки</string>
    <string name="desserts_txt">Десерты</string>
    <string name="meat_dish_txt">Мясные блюда</string>
    <string name="count_of_meals_txt">Количество порций</string>
    <string name="value_2">1</string>
    <string name="time_to_cook_txt">Время приготовления</string>
    <string name="value_20m">20 мин</string>
    <string name="count_of_calories">Калории</string>
    <string name="value_200">200 кал</string>
    <string name="rating_txt">Рейтинг</string>
    <string name="value_1">1</string>
    <string name="apply_txt">Применить</string>
    <!--Ingredients-->

</resources>