<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search_fragment"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search_title" />

        <item
            android:id="@+id/my_recipes_fragment"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/my_recipes_title" />

        <item
            android:id="@+id/profile_fragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile_title" />
        <item
            android:id="@+id/favorite_from_db_fragment"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorite_from_db" />
    </group>
</menu>