<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/registration_background" />

    <TextView
        android:id="@+id/daily_recipe_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/general_title_appname"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/daily_recipe_registration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/enter_title"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_email"
        android:layout_centerInParent="true"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forget_password_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="260dp"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:text="@string/forget_password_btn"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="11sp" />

    <FrameLayout
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp">

        <ImageButton
            android:id="@+id/registrationBtn"
            android:layout_width="315dp"
            android:layout_height="55dp"
            android:src="@drawable/button_rectangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_btn_login"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/question_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="13dp"
        android:text="@string/question_login"
        android:textColor="@color/dark_grey"
        android:textSize="16sp" />

    <Button
        android:id="@+id/return_auto_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/question_title_login"
        android:text="@string/registration_text"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="16sp" />

</RelativeLayout>