<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/frying_pan_empty_assorted_spices" />

    <TextView
        android:id="@+id/daily_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/daily_recipe_main_header_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daily_recipe"
        android:layout_centerInParent="true"
        android:text="@string/daily_recipe_second_header_welcome"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/textSize_13sp" />

    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/indentFromTheMarginStartLoginActivity_80"
        android:layout_marginEnd="@dimen/indentFromTheMarginEndLoginActivity_80"
        android:layout_marginBottom="@dimen/indentFromTheMarginBottomLoginActivity_110"
        android:background="@drawable/buttonshape"
        android:text="@string/registration_text"
        android:textAllCaps="false" />


<!--    <FrameLayout-->
    <!--        android:layout_width="315dp"-->
    <!--        android:layout_height="55dp"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_marginBottom="100dp">-->

    <!--        <ImageButton-->
    <!--            android:id="@+id/registrationBtn"-->
    <!--            android:layout_width="315dp"-->
    <!--            android:layout_height="55dp"-->
    <!--            android:src="@drawable/button_rectangle" />-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center"-->
    <!--            android:text="@string/registration_text"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="20sp" />-->
    <!--    </FrameLayout>-->

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize_16sp"
        android:text="@string/enter_welcome_btn" />

</RelativeLayout>